otel_tempo/k8s/base/deployment_grafana.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: service-grafana
  labels:
    app: service-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-grafana
  template:
    metadata:
      labels:
        app: service-grafana
    spec:
      containers:
        - name: service-grafana
          image: grafana/grafana:9.4.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: grafana-mnt-cnfg
              mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              subPath: grafana_datasources
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
      terminationGracePeriodSeconds: 60
      volumes:
        - name: grafana-mnt-cnfg
          configMap:
            name: grafana-config-map
