otel_tempo/k8s/base/service_tempo.yml
apiVersion: v1
kind: Service

metadata:
  name: service-tempo
  labels:
    app: service-tempo
spec:
  ports:
    - port: 3200
      targetPort: 3200
      protocol: TCP
      name: tempo
    - port: 9095
      targetPort: 9095
      protocol: TCP
      name: tempo-grpc
    - port: 4317
      targetPort: 4317
      protocol: TCP
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      protocol: TCP
      name: otlp-http
  selector:
    app: service-tempo
