otel_tempo/k8s/base/ingress_grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: service-tempo
  namespace: esavelyev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: tempo-esavelyev.k8s.hsmdev.ru
    http:
      paths:
      - backend:
          service:
            name: service-grafana
            port:
              name: grafana-ui-http
        path: /
        pathType: ImplementationSpecific
